# AHRS

./: .gitignore  MUX_IMU.py  MUX_VL6180X.py  README.md  custom_slam.py  fastSLAM1.py  function.py  main.py  main_Kuby.cpp  main_SLAM.py  main_SLAM2.py  main_SLAM3.py  main_connected.py  main_lidar.py  main_sensors.py  main_slam.py
AHRS_package/: Bmp388.py  Bmx160.py  DFRobot_BMX160.py  Vl53l1x.py  Vl6180x.py  __init__.py  bmp388_module.py  bmx160_module.py  i2c_mux.py  sensors_init.py  vl53l1x_module.py  vl6180x_module.py
AHRS_package/bmx160_needed/: read_all_data.py
data/: bmp388.txt  bmx160.txt  cloud_data.txt  dirty_percentage.txt  distance.txt  imu.txt  imu_data.txt  vl53l1x.txt  vl6180x.txt
data/current/: bmp388.txt  bmx160.txt  dirty_percentage.txt  distance.txt  lidar_cloud.txt
data/package/: bmp388.txt  bmx160.txt  distance.txt  lidar_cloud.txt  lidar_dirty.txt  lidar_imu.txt
debug_scripts/: MQTT_listener.py  check_MUX.py
helpfull/: MUX_VL53L1X.py
lib/: DFRobot_BMX160.py
lib/BreezySLAM/examples/: log2pgm.cpp  log2pgm.py  mines.py
lib/BreezySLAM/python/breezyslam/: sensors.py
lib/Slam_2D/: functions.py  rotations.py  slam.py
lib/libpointmatcher/: icp_simple.cpp
lib/unitree_lidar_sdk/: CMakeLists.txt
lib/unitree_lidar_sdk_pybind/: function.cpp  function.h  unitree_lidar_sdk_pybind.cpp
libpointmatcher/python/pybind11/: pybind11
module/: Bmp388.py  Bmx160.py  Compass.py  Data_manager.py  Fast_SLAM1.py  IMU_calibrator.py  Lidar_LM1.py  Mqtt.py  Mqtt_module.py  Vl53l1x.py  Vl6180x.py  __init__.py
sensor_modules/: Bmx160.py  Lidar_LM1.py  Vl53l1x.py  Vl6180x.py
slam_env/: pyvenv.cfg
unitree_lidar_sdk/: CMakeLists.txt
unitree_lidar_sdk/include/: parse_range_auxiliary_data_to_cloud.h
unitree_lidar_sdk_pybind/: CMakeLists.txt  function.cpp  function.h  unitree_lidar_sdk_pybind.cpp
utils/: __init__.py  fastSLAM1.py  slam_process.py  test_libpoint.py
